#62 renamed descriptions of ro constraints based to make it easier to read in Add Rememvy view

--- a/MyEssentialOilRemedies/iphone.storyboard
+++ b/MyEssentialOilRemedies/iphone.storyboard
@@ -560,17 +560,17 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="HYI-o5-Lxu" firstAttribute="top" secondItem="Ufb-EQ-g7s" secondAttribute="bottom" constant="1" id="6Fq-vy-Of4"/>
-                            <constraint firstItem="kdK-gF-bqZ" firstAttribute="leading" secondItem="d8a-t1-Jae" secondAttribute="leadingMargin" constant="-14" id="6jw-kS-yl4"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="HYI-o5-Lxu" secondAttribute="trailing" constant="35" id="J58-d5-HkX"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Ufb-EQ-g7s" secondAttribute="trailing" constant="-19" id="LF6-zj-7qy"/>
-                            <constraint firstItem="xzB-3O-xYE" firstAttribute="top" secondItem="HYI-o5-Lxu" secondAttribute="bottom" id="QyC-Kj-7rJ"/>
-                            <constraint firstItem="Ufb-EQ-g7s" firstAttribute="leading" secondItem="d8a-t1-Jae" secondAttribute="leadingMargin" constant="-19" id="XZz-o3-EkB"/>
-                            <constraint firstItem="xzB-3O-xYE" firstAttribute="top" secondItem="kdK-gF-bqZ" secondAttribute="bottom" id="YL2-ii-K7j"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="kdK-gF-bqZ" secondAttribute="trailing" constant="13" id="bT3-9d-YEI"/>
-                            <constraint firstItem="Ufb-EQ-g7s" firstAttribute="top" secondItem="d8a-t1-Jae" secondAttribute="topMargin" constant="-1" id="n46-Xd-wsL"/>
-                            <constraint firstItem="kdK-gF-bqZ" firstAttribute="top" secondItem="Ufb-EQ-g7s" secondAttribute="bottom" constant="1" id="ssO-lF-iHe"/>
-                            <constraint firstItem="HYI-o5-Lxu" firstAttribute="leading" secondItem="d8a-t1-Jae" secondAttribute="leadingMargin" constant="-14" id="vbB-ao-PCo"/>
+                            <constraint firstItem="HYI-o5-Lxu" firstAttribute="top" secondItem="Ufb-EQ-g7s" secondAttribute="bottom" constant="1" id="6Fq-vy-Of4" userLabel="OilsViewTrailing - Top"/>
+                            <constraint firstItem="kdK-gF-bqZ" firstAttribute="leading" secondItem="d8a-t1-Jae" secondAttribute="leadingMargin" constant="-14" id="6jw-kS-yl4" userLabel="DescriptionTrailing - Left"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="HYI-o5-Lxu" secondAttribute="trailing" constant="35" id="J58-d5-HkX" userLabel="OilsViewTrailing - right"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Ufb-EQ-g7s" secondAttribute="trailing" constant="-19" id="LF6-zj-7qy" userLabel="ToolBarTrailing - Right"/>
+                            <constraint firstItem="xzB-3O-xYE" firstAttribute="top" secondItem="HYI-o5-Lxu" secondAttribute="bottom" id="QyC-Kj-7rJ" userLabel="OilsViewTrailing - Bottom"/>
+                            <constraint firstItem="Ufb-EQ-g7s" firstAttribute="leading" secondItem="d8a-t1-Jae" secondAttribute="leadingMargin" constant="-19" id="XZz-o3-EkB" userLabel="ToolBarTrailing - Left"/>
+                            <constraint firstItem="xzB-3O-xYE" firstAttribute="top" secondItem="kdK-gF-bqZ" secondAttribute="bottom" id="YL2-ii-K7j" userLabel="DescriptionTrailing - Bottom"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="kdK-gF-bqZ" secondAttribute="trailing" constant="13" id="bT3-9d-YEI" userLabel="DescriptionTrailing - Right"/>
+                            <constraint firstItem="Ufb-EQ-g7s" firstAttribute="top" secondItem="d8a-t1-Jae" secondAttribute="topMargin" constant="-1" id="n46-Xd-wsL" userLabel="ToolBarTrailing - Top"/>
+                            <constraint firstItem="kdK-gF-bqZ" firstAttribute="top" secondItem="Ufb-EQ-g7s" secondAttribute="bottom" constant="1" id="ssO-lF-iHe" userLabel="DescriptionTrailing - Top"/>
+                            <constraint firstItem="HYI-o5-Lxu" firstAttribute="leading" secondItem="d8a-t1-Jae" secondAttribute="leadingMargin" constant="-14" id="vbB-ao-PCo" userLabel="OilsViewTrailing - Left"/>
                         </constraints>
                     </view>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
