--- a/MyEssentialOilRemedies/iphone.storyboard
+++ b/MyEssentialOilRemedies/iphone.storyboard
@@ -433,6 +433,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l1E-mu-1rK">
+                                <rect key="frame" x="2" y="108" width="344" height="510"/>
+                                <subviews>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Rtd-rs-aRe">
+                                        <rect key="frame" x="13" y="20" width="318" height="475"/>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences" spellCheckingType="yes"/>
+                                    </textView>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="Rtd-rs-aRe" firstAttribute="top" secondItem="l1E-mu-1rK" secondAttribute="topMargin" constant="12" id="Hsz-L2-kkm"/>
+                                    <constraint firstItem="Rtd-rs-aRe" firstAttribute="leading" secondItem="l1E-mu-1rK" secondAttribute="leadingMargin" constant="5" id="rja-nj-VUC"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="Rtd-rs-aRe" secondAttribute="trailing" constant="5" id="vry-Qa-idN"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="Rtd-rs-aRe" secondAttribute="bottom" constant="7" id="w6I-uy-h7N"/>
+                                </constraints>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HYI-o5-Lxu">
                                 <rect key="frame" x="2" y="108" width="322" height="510"/>
                                 <subviews>
@@ -562,12 +580,16 @@
                         <constraints>
                             <constraint firstItem="HYI-o5-Lxu" firstAttribute="top" secondItem="Ufb-EQ-g7s" secondAttribute="bottom" constant="1" id="6Fq-vy-Of4" userLabel="OilsViewTrailing - Top"/>
                             <constraint firstItem="kdK-gF-bqZ" firstAttribute="leading" secondItem="d8a-t1-Jae" secondAttribute="leadingMargin" constant="-14" id="6jw-kS-yl4" userLabel="DescriptionTrailing - Left"/>
+                            <constraint firstItem="l1E-mu-1rK" firstAttribute="top" secondItem="Ufb-EQ-g7s" secondAttribute="bottom" constant="1" id="Gsl-D1-vgX" userLabel="UsesViewTrailing - Top"/>
                             <constraint firstAttribute="trailingMargin" secondItem="HYI-o5-Lxu" secondAttribute="trailing" constant="35" id="J58-d5-HkX" userLabel="OilsViewTrailing - right"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Ufb-EQ-g7s" secondAttribute="trailing" constant="-19" id="LF6-zj-7qy" userLabel="ToolBarTrailing - Right"/>
                             <constraint firstItem="xzB-3O-xYE" firstAttribute="top" secondItem="HYI-o5-Lxu" secondAttribute="bottom" id="QyC-Kj-7rJ" userLabel="OilsViewTrailing - Bottom"/>
+                            <constraint firstItem="l1E-mu-1rK" firstAttribute="leading" secondItem="d8a-t1-Jae" secondAttribute="leadingMargin" constant="-14" id="VbH-nW-4eu" userLabel="UsesViewTrailing - Left"/>
                             <constraint firstItem="Ufb-EQ-g7s" firstAttribute="leading" secondItem="d8a-t1-Jae" secondAttribute="leadingMargin" constant="-19" id="XZz-o3-EkB" userLabel="ToolBarTrailing - Left"/>
                             <constraint firstItem="xzB-3O-xYE" firstAttribute="top" secondItem="kdK-gF-bqZ" secondAttribute="bottom" id="YL2-ii-K7j" userLabel="DescriptionTrailing - Bottom"/>
                             <constraint firstAttribute="trailingMargin" secondItem="kdK-gF-bqZ" secondAttribute="trailing" constant="13" id="bT3-9d-YEI" userLabel="DescriptionTrailing - Right"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="l1E-mu-1rK" secondAttribute="trailing" constant="13" id="iIZ-28-SR1" userLabel="UsesViewTrailing - Right"/>
+                            <constraint firstItem="xzB-3O-xYE" firstAttribute="top" secondItem="l1E-mu-1rK" secondAttribute="bottom" id="j7T-p5-aXT" userLabel="UsesViewTrailing - Bottom"/>
                             <constraint firstItem="Ufb-EQ-g7s" firstAttribute="top" secondItem="d8a-t1-Jae" secondAttribute="topMargin" constant="-1" id="n46-Xd-wsL" userLabel="ToolBarTrailing - Top"/>
                             <constraint firstItem="kdK-gF-bqZ" firstAttribute="top" secondItem="Ufb-EQ-g7s" secondAttribute="bottom" constant="1" id="ssO-lF-iHe" userLabel="DescriptionTrailing - Top"/>
                             <constraint firstItem="HYI-o5-Lxu" firstAttribute="leading" secondItem="d8a-t1-Jae" secondAttribute="leadingMargin" constant="-14" id="vbB-ao-PCo" userLabel="OilsViewTrailing - Left"/>
@@ -588,44 +610,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GWI-NC-Upr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1616.8" y="784.85757121439292"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="vHI-wy-bIc">
-            <objects>
-                <viewController id="bSp-N1-5Hl" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="svk-I7-S8u"/>
-                        <viewControllerLayoutGuide type="bottom" id="mj8-6d-ftW"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="9gV-xG-BHx">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="l1E-mu-1rK">
-                                <rect key="frame" x="5" y="127" width="344" height="510"/>
-                                <subviews>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Rtd-rs-aRe">
-                                        <rect key="frame" x="8" y="20" width="334" height="475"/>
-                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences" spellCheckingType="yes"/>
-                                    </textView>
-                                </subviews>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstItem="Rtd-rs-aRe" firstAttribute="top" secondItem="l1E-mu-1rK" secondAttribute="topMargin" constant="12" id="Hsz-L2-kkm"/>
-                                    <constraint firstItem="Rtd-rs-aRe" firstAttribute="leading" secondItem="l1E-mu-1rK" secondAttribute="leadingMargin" constant="5" id="rja-nj-VUC"/>
-                                    <constraint firstAttribute="trailingMargin" secondItem="Rtd-rs-aRe" secondAttribute="trailing" constant="5" id="vry-Qa-idN"/>
-                                    <constraint firstAttribute="bottomMargin" secondItem="Rtd-rs-aRe" secondAttribute="bottom" constant="7" id="w6I-uy-h7N"/>
-                                </constraints>
-                            </view>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="HGb-zN-8Dh" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2404" y="778.56071964017997"/>
         </scene>
         <!--View Remedy Details-->
         <scene sceneID="9zl-Uy-Y68">
