#68 Working on adjusting color

--- a/MyEssentialOilRemedies/iphone.storyboard
+++ b/MyEssentialOilRemedies/iphone.storyboard
@@ -2584,7 +2584,7 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="FVx-dx-Rr4"/>
-        <segue reference="tZI-XI-ca5"/>
+        <segue reference="9Qq-SB-b9d"/>
         <segue reference="i3e-cA-Y4r"/>
         <segue reference="EWW-Fh-Ngj"/>
     </inferredMetricsTieBreakers>
